--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,70 @@
-.tasks {
-    div {
-        
+$black: #252525;
+$purple: #6C63FF;
+$white: #F7F7F7;
+$poppins: 'Poppins', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+.container {
+    height: 100vh;
+    background-color: $white;
+    max-width: 750px;
+    margin: 0 auto;
+    font-family: $poppins;
+    
+    header {
+        h1 {
+            text-align: center;
+            
+        }
+        .headerSecond {
+            // background-color: red;
+            max-height: 38px;
+            display: flex;
+            gap: 16px;
+            
+            .search {
+                width: 100%;
+                height: 100%;
+                border-radius: 5px;
+                border-style: none;
+                // background-color: $white;
+                color: $black;
+                // padding-left: 10px;
+                border: 1px solid $purple;
+                font-size: 12px;
+
+                &::placeholder {
+                    color: $black;
+                    opacity: 0.5;
+                    font-size: 12px;
+                }
+            }
+
+            select {
+                width: 85px;
+                border-radius: 5px;
+                border-style: none;
+                background-color: $purple;
+                color: $white;
+
+            }
+
+            button {
+                background-color: $purple;
+                border-style: none;
+                border-radius: 5px;
+                width: 38px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
+                    fill: black;
+                    height: 22px;
+                    width: 22px;
+                }
+            }
+        }
+
     }
 }
