--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,70 +1,119 @@
 $black: #252525;
 $purple: #6C63FF;
 $white: #F7F7F7;
+$sidebar: #d5d5d51d;
 $poppins: 'Poppins', sans-serif;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 .container {
-    height: 100vh;
+    min-height: 100vh;
     background-color: $white;
-    max-width: 750px;
     margin: 0 auto;
     font-family: $poppins;
-    
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    /* width */
+    //   grid-template-rows: 80px 1fr;     /* height */
+    grid-template-areas:
+        "header header"
+        "sidebar content";
+    grid-template-rows: max-content 1fr;
+
     header {
+        grid-area: header;
+        height: max-content;
+        border-bottom: 1px solid $black;
+
         h1 {
             text-align: center;
-            
         }
-        .headerSecond {
-            // background-color: red;
-            max-height: 38px;
+
+    }
+
+    .sidebar {
+        padding-top: 8px;
+        background-color: $sidebar;
+        grid-area: sidebar;
+        padding-left: 20px;
+
+        button {
+            color: black;
+            width: 100%;
             display: flex;
-            gap: 16px;
-            
-            .search {
-                width: 100%;
-                height: 100%;
-                border-radius: 5px;
-                border-style: none;
-                // background-color: $white;
-                color: $black;
-                // padding-left: 10px;
-                border: 1px solid $purple;
-                font-size: 12px;
+            border-style: none;
+            background-color: transparent;
+            cursor: pointer;
+            padding: 5px 0;
 
-                &::placeholder {
-                    color: $black;
-                    opacity: 0.5;
-                    font-size: 12px;
+            &:hover {
+                background-color: #544e4d2c;
+                border-radius: 5px;
+            }
+
+            span.add {
+                margin-left: 16px;
+                color: white;
+                margin-right: 8px;
+                background-color: #d33322;
+                border-radius: 50%;
+            }
+
+        }
+
+        .projects {
+            margin-top: 54px;
+
+
+            .projectTitle {
+                // border: 2px solid $black;
+                display: flex;
+                align-items: center;
+                font-size: 20px;
+                font-weight: 500;
+
+                &:hover {
+                    background-color: #544e4d2c;
+                    border-radius: 5px;
+                    cursor: pointer;
+
+                    button {
+                        opacity: 1;
+                    }
+                }
+
+                button {
+                    opacity: 0;
+                    margin-left: auto;
+                    margin-right: 20px;
+                    border-style: none;
+                    border-radius: 5px;
+                    width: min-content;
+                    padding: 0px 10px;
+
+
+                    span {
+                        position: relative;
+                        font-size: 20px;
+                    }
                 }
             }
 
-            select {
-                width: 85px;
-                border-radius: 5px;
-                border-style: none;
-                background-color: $purple;
-                color: $white;
+            .addedProjects {
+                // border: 1px solid $black;
+                button {
+                    // position: relative;
 
-            }
-
-            button {
-                background-color: $purple;
-                border-style: none;
-                border-radius: 5px;
-                width: 38px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                img {
-                    fill: black;
-                    height: 22px;
-                    width: 22px;
+                    span::after {
+                        content: '#';
+                        padding-right: 4px;
+                    }
                 }
             }
         }
+    }
 
+    .content {
+        grid-area: content;
     }
 }
